updated setting for MI200 series GPUs

--- a/configure.ac
+++ b/configure.ac
@@ -139,6 +139,7 @@ AM_CONDITIONAL([COND_HIP_MI8], [test x"$want_hip" = xMI8])
 AM_CONDITIONAL([COND_HIP_MI25], [test x"$want_hip" = xMI25])
 AM_CONDITIONAL([COND_HIP_MI50], [test x"$want_hip" = xMI50])
 AM_CONDITIONAL([COND_HIP_MI100], [test x"$want_hip" = xMI100])
+AM_CONDITIONAL([COND_HIP_MI200], [test x"$want_hip" = xMI200])
 AM_CONDITIONAL([COND_HIP_CUDA5], [test x"$want_hip" = xcuda5])
 AM_CONDITIONAL([COND_HIP_CUDA6], [test x"$want_hip" = xcuda6])
 AM_CONDITIONAL([COND_HIP_CUDA7], [test x"$want_hip" = xcuda7])
