--- a/setup/constants.h.in
+++ b/setup/constants.h.in
@@ -197,6 +197,12 @@
 ! was found by trial and error
   double precision, parameter :: SOURCE_DECAY_MIMIC_TRIANGLE = 1.628d0
 
+! monochromatic source time function
+! flag to use monochromatic source time function for CMT sources
+  logical, parameter :: USE_MONOCHROMATIC_CMT_SOURCE = .false.
+! This parameter determines the taper length of monochromatic source time function in seconds
+  double precision, parameter :: TAPER_MONOCHROMATIC_SOURCE = 200.0d0
+
 ! receivers
 
 ! use this t0 as earliest starting time rather than the automatically calculated one
@@ -694,7 +700,7 @@
 
 ! number of lines per source in CMTSOLUTION file
   integer, parameter :: NLINES_PER_CMTSOLUTION_SOURCE = 13
-  integer, parameter :: NLINES_PER_FORCESOLUTION_SOURCE = 10
+  integer, parameter :: NLINES_PER_FORCESOLUTION_SOURCE = 11
 
 ! number of iterations to solve the system for xi and eta
 ! setting it to 5 instead of 4 ensures that the result obtained is not compiler dependent
