--- a/Makefile.in
+++ b/Makefile.in
@@ -407,6 +407,20 @@ endif
 
 #######################################
 ####
+#### HDF5 (parallel)
+#### with configure: ./configure --with-hdf5 HDF5_LIBS=.. HDF5_FCFLAGS=.. HDF5_INC=..
+####
+#######################################
+
+@COND_HDF5_TRUE@HDF5 = yes
+@COND_HDF5_FALSE@HDF5 = no
+
+# adds compiler flag
+@COND_HDF5_TRUE@FCFLAGS += @HDF5_FCFLAGS@ @HDF5_INCLUDES@
+@COND_HDF5_TRUE@MPILIBS += @HDF5_LIBS@ -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lstdc++
+
+#######################################
+####
 #### directories
 ####
 #######################################
