updates hdf5 compilation and routines

--- a/Makefile.in
+++ b/Makefile.in
@@ -417,7 +417,7 @@ endif
 
 # adds compiler flag
 @COND_HDF5_TRUE@FCFLAGS += @HDF5_FCFLAGS@ @HDF5_INCLUDES@ $(FC_DEFINE)USE_HDF5
-@COND_HDF5_TRUE@LDFLAGS += @HDF5_LIBS@ -lhdf5hl_fortran -lhdf5_hl -lhdf5 -lstdc++
+@COND_HDF5_TRUE@LDFLAGS += @HDF5_LIBS@ -lhdf5_fortran -lhdf5hl_fortran    # -lhdf5_hl -lhdf5 -lstdc++
 
 #######################################
 ####
