--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -152,9 +152,13 @@ jobs:
       BUILD: true
 
 - job: compilation_CUDA11
-  displayName: 'Compilation CUDA 11'
+  displayName: 'Compilation CUDA 11 GCC 10'
   pool:
     vmImage: 'ubuntu-20.04'
+  variables:
+    CC: gcc-10
+    CXX: g++-10
+    FC: gfortran-10
   steps:
   - template: .azure-pipelines/install-template.yml
     parameters:
@@ -167,9 +171,26 @@ jobs:
       BUILD: true
 
 - job: compilation_CUDA12
-  displayName: 'Compilation CUDA 12'
+  displayName: 'Compilation CUDA 12 GCC 10'
   pool:
     vmImage: 'ubuntu-20.04'
+  variables:
+    CC: gcc-10
+    CXX: g++-10
+    FC: gfortran-10
+  steps:
+  - template: .azure-pipelines/install-template.yml
+    parameters:
+      CUDA: true
+      CUDA_V: '12.1'
+  - template: .azure-pipelines/configure-template.yml
+    parameters:
+      TESTFLAGS: '--with-mpi --enable-vectorization --with-cuda=cuda11'
+      CUDA: true
+      BUILD: true
+
+- job: compilation_CUDA12_latest
+  displayName: 'Compilation CUDA 12 latest'
   steps:
   - template: .azure-pipelines/install-template.yml
     parameters:
