--- a/.azure-pipelines/install-template.yml
+++ b/.azure-pipelines/install-template.yml
@@ -22,7 +22,7 @@ steps:
     # fortran/openMPI compiler
     echo "CC: ${CC} CXX: ${CXX} FC: ${FC}"
     # updates repository
-    echo; echo `uname -a`; echo
+    echo; echo `uname -a`; lsb_release -a; echo
     sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 6B05F25D762E3157
     sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 78BD65473CB3BD13
     sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 762E3157
