updates azure check

--- a/.azure-pipelines/install-template.yml
+++ b/.azure-pipelines/install-template.yml
@@ -81,6 +81,8 @@ steps:
     echo
     echo "numpy version : "
     python -c "import numpy; print(numpy.__version__)"
+    # checks exit code
+    if [[ $? -ne 0 ]]; then exit 1; fi
     echo
 
     # version infos
