--- a/external_libs/scotch_5.1.12b/src/Make.inc/Makefile.inc.x86-64_pc_linux2
+++ b/external_libs/scotch_5.1.12b/src/Make.inc/Makefile.inc.x86-64_pc_linux2
@@ -9,9 +9,9 @@ CAT		= cat
 CCS		= gcc
 CCP		= mpicc
 CCD		= gcc
-CFLAGS		= -O3 -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_RENAME -DSCOTCH_RENAME_PARSER -DSCOTCH_PTHREAD -Drestrict=__restrict -DIDXSIZE64
+CFLAGS		= -O3 -march=native -Ofast -DCOMMON_FILE_COMPRESS_GZ -DCOMMON_PTHREAD -DCOMMON_RANDOM_FIXED_SEED -DSCOTCH_RENAME -DSCOTCH_RENAME_PARSER -DSCOTCH_PTHREAD -Drestrict=__restrict -DIDXSIZE64
 CLIBFLAGS	=
-LDFLAGS		= -lz -lm
+LDFLAGS		= -lz -lm -lpthread
 CP		= cp
 LEX		= flex -Pscotchyy -olex.yy.c
 LN		= ln
