--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -691,17 +691,20 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install packages
+      env:
+        TEST: with-hdf5
       run: ./.github/scripts/run_install.sh
       shell: bash
 
     - name: Run build
       env:
-        TESTFLAGS: --with-mpi --with-hdf5
+        TESTFLAGS: --with-mpi --with-hdf5 HDF5_INC=/usr/include/hdf5/openmpi/ HDF5_LIBS=-L/usr/lib/x86_64-linux-gnu/hdf5/openmpi
       run: ./.github/scripts/run_build.sh
       shell: bash
 
     - name: Run test
       env:
+        TEST: with-hdf5
         TESTDIR: EXAMPLES/applications/meshfem3D_examples/socal1D/
         TESTID: 0
       run: ./.github/scripts/run_tests.sh
